--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
     margin: 0px 10px;
     border:1px solid #000;
     position:relative;
-    background-image:url("/images/img1.jpg");
+    background-image:url("images/img1.jpg");
     background-repeat: no-repeat;
     background-position:center top;
 }
