--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@
     border:1px solid #000;
     position:relative;
     background-image:url("images/img1.jpg");
+    background-colour: blue;
     background-repeat: no-repeat;
     background-position:center top;
 }
