--- a/style/style.css
+++ b/style/style.css
@@ -15,13 +15,13 @@
 .container h1 {
     padding-top:80px;
     text-align: center;
-    color:white;
+    color:black;
     padding-bottom: 30px;
 }
 .container p{
     font-size: large;
     text-align: center;
-    color: white;
+    color: black;
     padding-bottom:40px;
     padding-left: 30px;
     padding-right: 30px;
