--- a/style/style.css
+++ b/style/style.css
@@ -27,8 +27,8 @@
     padding-right: 30px;
 }
 .button {
-    background-color:white;
-    color:black;
+    background-color:black;
+    color:white;
     border:none;
     padding: 25px 30px;
     margin-left: 550px;
