--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
     border:1px solid #000;
     position:relative;
     background-image:url("images/img1.jpg");
-    background-colour: blue;
+    colour: blue;
     background-repeat: no-repeat;
     background-position:center top;
 }
