--- a/style/style.css
+++ b/style/style.css
@@ -15,20 +15,20 @@
 .container h1 {
     padding-top:80px;
     text-align: center;
-    color:black;
+    color:white;
     padding-bottom: 30px;
 }
 .container p{
     font-size: large;
     text-align: center;
-    color: black;
+    color: white;
     padding-bottom:40px;
     padding-left: 30px;
     padding-right: 30px;
 }
 .button {
-    background-color:black;
-    color:white;
+    background-color:white;
+    color:black;
     border:none;
     padding: 25px 30px;
     margin-left: 550px;
