--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
     margin: 0px 10px;
     border:1px solid #000;
     position:relative;
-    background-image:url('../images/img1.jpg');
+    background-image:url('../images/ima.jpg');
     colour: blue;
     background-repeat: no-repeat;
     background-position:center top;
@@ -31,7 +31,7 @@
     color:black;
     border:none;
     padding: 25px 30px;
-    margin-left: 550px;
+    margin-left: 400px;
     font-size:larger;
 }
 .button:hover{
